Fix review comments